- Add Teams APIs - Set Request Timeout - Add Upload Picture Functionality - Set up Nodemon

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,11 @@
 {
-    "extends": "airbnb-base",
-    "rules": {
-        "comma-dangle":"off",
-        "consistent-return": "off",
-        "import/prefer-default-export": "off",
-        "indent": "off",
-        "no-console": "off",
-        "no-underscore-dangle": "off",
-        "prefer-destructuring": "off",
-        "quotes": "off"
-    }
+  "extends": "airbnb-base",
+  "rules": {
+    "comma-dangle": "off",
+    "consistent-return": "off",
+    "import/prefer-default-export": "off",
+    "no-console": "off",
+    "no-underscore-dangle": "off",
+    "prefer-destructuring": "off"
+  }
 }
