--- a/package.json
+++ b/package.json
@@ -4,28 +4,35 @@
   "description": "Manage Team Like a Country",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --exec babel-node src/server.js",
     "build": "babel src -d dist",
-    "start": "node dist/server.js",
+    "serve": "node dist/server.js",
     "clean": "rimraf ./dist",
     "lint": "eslint"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "nodemon": "^1.18.10",
     "rimraf": "^2.6.2"
   },
   "dependencies": {
     "aws-sdk": "^2.395.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "connect-timeout": "^1.9.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.9",
+    "multer": "^1.4.1",
     "uuid": "^3.3.2"
   }
 }
