--- a/package.json
+++ b/package.json
@@ -13,26 +13,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-<<<<<<< HEAD
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
-=======
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
->>>>>>> fcc2aa7a93feafbb771776807ee73766c9ab7b00
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-<<<<<<< HEAD
     "eslint-plugin-jsx-a11y": "^6.2.1",
-=======
     "nodemon": "^1.18.10",
->>>>>>> fcc2aa7a93feafbb771776807ee73766c9ab7b00
     "rimraf": "^2.6.2"
   },
   "dependencies": {
@@ -40,6 +31,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-timeout": "^1.9.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.9",
