--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "comma-dangle": "off",
     "consistent-return": "off",
+    "func-names": "off",
     "import/prefer-default-export": "off",
     "no-console": "off",
     "no-underscore-dangle": "off",
