--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "import/prefer-default-export": "off",
     "no-console": "off",
     "no-underscore-dangle": "off",
+    "no-useless-constructor": "off",
     "prefer-destructuring": "off"
   }
 }
